--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,9 +83,9 @@ body::-webkit-scrollbar {
 } 
 
 .debugBG{
-    background-color: rgb(204, 222, 251);
+    /* background-color: rgb(204, 222, 251); */
     border: 1px solid rgb(0, 0, 0);
-    /*background-color: rgba(240, 73, 73, 0.975);*/
+    background-color: rgba(240, 73, 73, 0.975);
 }
 
 .fullBG {
@@ -117,6 +117,15 @@ body::-webkit-scrollbar {
     color: rgb(0, 0, 0);
 }
 
+.item-small-pic {
+    height: 150px;
+    overflow: hidden;
+}
+
+.item-block {
+    height: 400px;
+}
+
 /* profile picture */ 
 #profile {
     width: 150px;
@@ -131,6 +140,8 @@ body::-webkit-scrollbar {
 #profile img {
     width: 150px;
     height: 150px;
+    overflow: hidden;
+    border-radius: 50%;
 }
 
 #img-upload {
