--- a/views/createItems.hbs
+++ b/views/createItems.hbs
@@ -1,46 +1,55 @@
 <section>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow "> 
-        <a class="nav-item ml-4 mr-4" href="/logout">
-            <span class="nav-link">Logout</span>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>   
-        <div class="collapse navbar-collapse" id="navbarNav">
-            {{!-- right side--}}
-            <ul class="navbar-nav ml-auto mr-5">
-                <div class="r-flex">
-                    <li class="nav-item ml-4">
-                        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item ml-4">
-                        <a class="nav-link" href="/itemListing">My Items<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item ml-4">
-                        <a class="nav-link" href="/friends">Friends<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item ml-4">
-                        <a class="nav-link" href="/createItem">Sell Item</a>
-                    </li>
-                    <li class="nav-item ml-4">
-                        <a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a>
-                    </li>
-                </div>
-            </ul>
-        </div>
-    </nav>
+ <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow "> 
+  <a class="navbar-brand ml-5" href="/">
+  <span class="black-text">WebMart</span>
+  </a>
 
-<div class="row">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+  </button>   
+  <div class="collapse navbar-collapse" id="navbarNav">
+  <div class="collapse navbar-collapse" id="navbarNav">
+  
+  {{!-- All elements here appear on the left side of the navbar --}}
+  <ul class="navbar-nav">
+  </ul>
+  
+  {{!-- All elements here appear on the right side of the navbar --}}
+  <ul class="navbar-nav ml-auto mr-5">
+    <li class="nav-item ml-4">
+    <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ml-4">
+    <a class="nav-link" href="/explore">Explore <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ml-4">
+    <a class="nav-link" href="/itemListing">My Items<span class="sr-only">(current)</span></a>
+    </li>
+     <li class="nav-item ml-4">
+    <a class="nav-link" href="/friends">Friends<span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ml-4">
+    <a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ml-4  mr-4">
+    <a class="nav-link" href="/logout">Logout<span class="sr-only">(current)</span></a>
+    </li>
+  </ul>
+  </div>
+  </nav>
+
+<div class="content-wrapper">
+    <br><br>
+    <div class="row">
     <div class="col-md-4">
     </div>    
     <div class="col-md-4">
-        <h1><br><br>Add New Item<br></h1>
+    <h1>Add New Item</h1>
+    <hr>
     <div class="container">
             <form action="/createItem" method="POST" enctype="multipart/form-data">
                 <div class="button">
-                    <label for="chooseFile" >
-                        Choose Image
-                    </label>
+                <label for="chooseFile">Choose Image</label>
                 </div>
                 <input type="file" id="chooseFile" name="chooseFile" accept="image/*" onchange="loadFile(this)">                         
             <div class="form-group">   
@@ -96,4 +105,6 @@
     </div>
 
 </div>
+</div>
+
 </section>
