--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,101 +1,72 @@
 <section>
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow "> 
-        <a class="navbar-brand ml-5" href="/logout">
-            <span class="black-text">Logout</span>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            {{!-- left side--}}
-            <ul class="navbar-nav">
-            </ul>
-            {{!-- right side--}}
-            <ul class="navbar-nav ml-auto mr-5">
-                <div class="r-flex">
-                    <li class="nav-item ml-4">
-                        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item ml-4 mr-4">
-                        <a class="nav-link" href="/itemListing"> View Item List <span class="sr-only">(current)</span></a>
-                    </li>
-                     <li class="nav-item ml-4">
-                        <a class="nav-link" href="/friends"> Friends <span class="sr-only">(current)</span></a>
-                    </li>
-                </div>
-            </ul>
-        </div>
-    </nav>
-    <br> 
-    <br> 
+  <a class="navbar-brand ml-5" href="/">
+  <span class="black-text">WebMart</span>
+  </a>
 
-    <section class="jumbotron text-center">
-        <div class="container">
-            <h2 class="jumbotron-heading">My Profile</h2>
-        </div>
-    </section>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+  </button>   
+  <div class="collapse navbar-collapse" id="navbarNav">
+  <div class="collapse navbar-collapse" id="navbarNav">
+  
+  {{!-- All elements here appear on the left side of the navbar --}}
+  <ul class="navbar-nav">
+  </ul>
+  
+  {{!-- All elements here appear on the right side of the navbar --}}
+  <ul class="navbar-nav ml-auto mr-5">
+    <li class="nav-item ml-4">
+    <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ml-4">
+    <a class="nav-link" href="/explore">Explore <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ml-4">
+    <a class="nav-link" href="/itemListing">My Items<span class="sr-only">(current)</span></a>
+    </li>
+     <li class="nav-item ml-4">
+    <a class="nav-link" href="/friends">Friends<span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ml-4">
+    <a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ml-4  mr-4">
+    <a class="nav-link" href="/logout">Logout<span class="sr-only">(current)</span></a>
+    </li>
+  </ul>
+  </div>
+  </nav>
 
    <div class="content-wrapper"> 
-     <div class="col-md-6 p-5">
-        <div id="profile">
-            <img src="/images/profile/{{img}}"  id="profile-img"></img>
+        <br><br>
+
+        <div class="row border p-5 ">
+            <div class="col">
+                <div class="text-center" >
+                    <img id = "profile" src="/images/profile/{{img}}">
+                </div>
+            </div>
+            <div class="col">
+                <div>
+                    <br>
+                    <h1>{{username}}</h1>
+                    <h1>{{email}}</h1>
+                </div>
+            </div>
         </div>
-          <div>
-            <h1>Account Name : {{username}}</h1>
-            <h1>Email : {{email}}</h1>
-        </div>
+    
         <br>
-        <input id="img-upload" type="file" 
-            name="profile photo" placeholder="Photo" required="" capture>
-          <div>
-            <strong> {{username}}</strong> <br> 
-            <a href="mailto:#">{{email}}</a>
-            {{!-- <h1>Email : {{email}}</h1> --}}
-            
+
+        <div class="row border">
+            <div class="col">
+                <div class="" id="aboutInfo">
+                    <h2>About</h2>
+                    <p>{{about}}</p>
+                    <button onclick="editAvailable()"><a href="/editProfile">Edit Profile</a></button>
+                </div>
+            </div>
         </div>
-        {{!-- <img src="{{img}}" alt="insert profile image" class="img-rounded">
-        <h4>{{username}}</h4> --}} 
-    
-    <br>
-    
-    <div class="row">
-        <div class="column">
-            <div class="col-md-6 friendBG" id="aboutInfo" style="display: block; position:absolute; left:800px; top:50px; height:250px" onclick="editAvailable()">
-                <br>
-                <h2>About</h2>
-                <p>{{about}}
-                </p>
-                <button onclick="editAvailable()"><a href="/editProfile">Edit Profile</a></button>
-            </div>
-            <!--Editing Section Will be hided-->
-            <div class="col-md-4 friendBG" style ="display: none;"  id="aboutEdit">
-                <h2 style = "display: none;">About</h2>
-                <input class="input-text" type = "text" style = "width:220px;height:100px;font-size:30px;">
-                <button onclick=" editDisable()" id="aboutEdit">Confirm Profile</button>
-            </div>
-        
-            <h3>Items List</h2>
-            {{#each purchaseHistory}}            
-            <div class="col-md-6 debugBG">
-                    <img src="/images/item/{{this.image}}"  id="item-img" width="130px"></img>
-                    <h4>{{this.name}}</h4>
-                    <h5>Price : ${{this.price}}</h5>
-                    <h5><P>Description of Item :</P></h5>
-                    <p>{{this.description}}</p>
-                    <p>Selling by : {{this.seller}}</p>
-                    <p>Uploaded on : {{this.creationDate}}</p>
-                    {{!--Here is fomring to delete items--}}
-                    <form action ='/confirmPurchase' method="POST" id="request-form">               
-                        <input type = "hidden" value = {{this._id}} name ="item">
-                        <input type = "submit" value = "Confirm Purchase" name = "delete">
-                    </form>
-            </div>
-        {{/each}} 
-        
-        </div>
-     </div>
-    </div>
 
     </div>
-<div>
 <section>
